# arxiv-rag

./: .gitignore  README.md  app.py  cloud_eval_notebook.ipynb  cloud_eval_runner.py  evaluate_models.py  notebook.ipynb  pyproject.toml  run_simple_baseline.py
arxiv_rag/: __init__.py  baseline_cli.py  quick_query_cli.py
arxiv_rag/dataset/: __init__.py  dataloader.py  example.py  prepare_data.py
arxiv_rag/evaluation/: __init__.py  evaluator.py
arxiv_rag/models/: __init__.py  baseline.py  cross_encoder.py  dense.py  embedding_model.py  hybrid.py  llm_reranker.py  random_retriever.py
eval/: BENCHMARK_FORMAT.md  benchmark.tsv  benchmark_fast.tsv  benchmark_micro.tsv  benchmark_smoke.tsv  litsearch_benchmark.tsv  semantic_bench.tsv
