[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-rag"
version = "0.1.0"
description = "Optimizing RAG for arXiv"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "tqdm",
    "scikit-learn",
    "rank_bm25",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["arxiv_rag*"]
