[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-rag"
version = "0.1.0"
description = "Optimizing RAG for arXiv"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "tqdm",
    "scikit-learn",
    "rank_bm25",
    "kaggle",
]

[project.scripts]
arxiv-rag-prepare-data = "arxiv_rag.dataset.prepare_data:main"
arxiv-rag-run-baseline = "arxiv_rag.baseline_cli:main"
arxiv-rag-evaluate = "evaluate_models:main"

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = ["evaluate_models", "run_simple_baseline"]

[tool.setuptools.packages.find]
where = ["."]
include = ["arxiv_rag*"]
