[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-rag"
version = "0.1.0"
description = "Optimizing RAG for arXiv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "tqdm",
    "scikit-learn",
    "rank_bm25",
    "kaggle",
    "sentence-transformers>=3.2.1",
    "faiss-cpu>=1.8.0.post1",
    "torch>=2.1.0",
    "flask>=2.3",
    "aiohttp>=3.9",
    "pydantic>=2.0",
]

[project.scripts]
arxiv-rag-prepare-data = "arxiv_rag.dataset.prepare_data:main"
arxiv-rag-run-baseline = "arxiv_rag.baseline_cli:main"
arxiv-rag-quick = "arxiv_rag.quick_query_cli:main"
arxiv-rag-evaluate = "evaluate_models:main"

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = ["evaluate_models", "run_simple_baseline"]

[tool.setuptools.packages.find]
where = ["."]
include = ["arxiv_rag*"]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly-cu128" }

[tool.uv]
prerelease = "allow"
environments = [
    "sys_platform == 'win32'",
]

